--- a/FormEditor/FormEditor/Views/Home/Index.cshtml
+++ b/FormEditor/FormEditor/Views/Home/Index.cshtml
@@ -1,21 +1,9 @@
 ﻿@model FormEditor.Models.Form
 @{
-    Layout = null;
+    Layout = "/Views/Shared/_Layout.cshtml";
 }
 
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="~/Content/bootstrap.min.css" crossorigin="anonymous">
 
-    <link rel="stylesheet" type="text/css" href="~/Content/css/main.css">
-    <title>Form Editor</title>
-</head>
-<body>
     <div class="container">
         @using (Html.BeginForm("Index", "Home", FormMethod.Post))
         {
@@ -23,12 +11,14 @@
                 <h3><label for="header-form">Редактирование формы</label></h3>
                 <div class="col-md-7">
                     <div class="row form-group">
+                        @Html.HiddenFor(o=>o.Id)
                         @*<input type="text" aria-label="Large" name="Name" class="form-control" placeholder="Имя формы">*@
                         @Html.TextBoxFor(o => o.Name, new { @class = "form-control", placeholder = "Имя формы", name = "Name" })
                         @Html.ValidationMessageFor(o => o.Name, "", new { @style = "color:red" })
                     </div>
                     <div class="row form-group">
-                        <textarea class="form-control" name="Description" placeholder="Описание формы" rows="1"></textarea>
+                        @Html.TextAreaFor(o => o.Description, new { @class = "form-control", name = "Description", rows = "1", placeholder = "Описание формы" })
+
                     </div>
                 </div>
                 <div class="col-md-9">
@@ -39,25 +29,24 @@
                             <dirow class="card card-body border-dark">
                                 <div class="row form-group text-dark">
                                     <div class="col-md-5">
-                                        @Html.TextBoxFor(o => o.Blocks[i].Header, new { @class = "form-control headerInput", type = "text", placeholder = "Заголовок поля" })
+                                        @Html.TextBoxFor(o => o.Blocks[i].Header, new { @class = "form-control headerInput", type = "text", placeholder = "Заголовок поля", name= "Blocks["+i+"].Header" })
                                         @Html.ValidationMessageFor(o => o.Blocks[i].Header, "", new { @style = "color:red" })
                                     </div>
                                     <div class="col-md-5 select">
-                                        @Html.DropDownListFor(Model => Model.Blocks[i].SelectedField, Model.Blocks[i].Fields.Select(
-             x => new SelectListItem() { Value = x.Id.ToString(), Text = x.Title }
-                                       ), new { @class= "custom-select" })
+                                        @Html.DropDownListFor(o => o.Blocks[i].SelectedTypeField, new SelectList(Model.Fields,"Value","Text",Model.Blocks[i].SelectedTypeField), new { @class= "custom-select", name= "Blocks[" + i + "].SelectedTypeField" })
                                     </div>
                                     <div class="col">
                                         <div class="d-flex justify-content-end">
+                                            
                                             <a class="delete" href="#"><img src="/Content/images/icons8-delete-filled.svg"  ></a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="row form-group text-dark">
                                     <div class="col questEl">
-                                        @if ((Model.Blocks[i].SelectedField) == 1 || (Model.Blocks[i].SelectedField) == 2)
+                                        @if ((Model.Blocks[i].SelectedTypeField) == "1" || (Model.Blocks[i].SelectedTypeField) == "2")
                                         {
-                                            @Html.TextBoxFor(o => o.Blocks[i].TextField, new { @class = "form-control blockArea", name = "Blocks[" + i + "].TextField", rows = "2",type ="text" })
+                                            @Html.TextBoxFor(o => o.Blocks[i].TextField, new { @class = "form-control blockArea", name = "Blocks["+i+"].TextField", rows = "2", type = "text" })
                                         }
                                         else
                                         {
@@ -68,7 +57,7 @@
                                 <div class="row check-style justify-content-end">
                                     <div class="custom-control custom-checkbox">
                                         <label>
-                                            @Html.CheckBoxFor(o => o.Blocks[i].Mandatory, new { @checked = "checked", @class = "checkboxMand", type = "checkbox" })
+                                            @Html.CheckBoxFor(o => o.Blocks[i].Mandatory, new { @checked = "checked", @class = "checkboxMand", type = "checkbox",name= "Blocks["+i+"].Mandatory" })
                                             Обязательный вопрос
                                         </label>
                                     </div>
@@ -90,13 +79,5 @@
             </div>
         }
     </div>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="~/Scripts/popper.min.js" crossorigin="anonymous"></script>
-    <script src="~/Scripts/bootstrap.min.js" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="~/Scripts/Js/main.js"></script>
-    <script src="~/Scripts/jquery.validate.js"></script>
-    <script src="~/Scripts/jquery.validate.min.js"></script>
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/jqueryval")
-</body>
-</html>
+
+ 
