--- a/FormEditor/FormEditor/Views/Shared/_Layout.cshtml
+++ b/FormEditor/FormEditor/Views/Shared/_Layout.cshtml
@@ -1,18 +1,23 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="~/Scripts/jquery.validate.unobtrusive.js"></script>
-    <script src="~/Scripts/jquery-3.3.1.js"></script>
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
-    <script src="~/Scripts/"></script>
+    <link rel="stylesheet" href="~/Content/bootstrap.min.css" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="~/Content/css/main.css">
+    <title>Form Editor</title>
 </head>
 <body>
     @RenderBody()
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="~/Scripts/popper.min.js" crossorigin="anonymous"></script>
+    <script src="~/Scripts/bootstrap.min.js" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="~/Scripts/Js/main.js"></script>
+    <script src="~/Scripts/jquery.validate.js"></script>
+    <script src="~/Scripts/jquery.validate.min.js"></script>
     @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
+    @Scripts.Render("~/bundles/jqueryval")
 </body>
 </html>
