--- a/FormEditor/FormEditor/Views/Shared/_Layout.cshtml
+++ b/FormEditor/FormEditor/Views/Shared/_Layout.cshtml
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="~/Content/bootstrap.min.css" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="~/Content/css/main.css">
+    <link rel="stylesheet" href="~/Content/alertifyjs/alertify.min.css" />
+    <link rel="stylesheet" href="~/Content/alertifyjs/themes/default.min.css" />
     <title>Form Editor</title>
 </head>
 <body>
@@ -17,6 +19,9 @@
     <script type="text/javascript" src="~/Scripts/Js/main.js"></script>
     <script src="~/Scripts/jquery.validate.js"></script>
     <script src="~/Scripts/jquery.validate.min.js"></script>
+    <script src="~/Scripts/alertify.min.js"></script>
+    @Scripts.Render("~/scripts/jquery-3.3.1.js")
+    @Scripts.Render("~/scripts/jquery.unobtrusive-ajax.js")
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/jqueryval")
 </body>
