--- a/UserForm/src/app/form.component.css
+++ b/UserForm/src/app/form.component.css
@@ -1,1 +1,21 @@
-.container{}
+.main-container{
+    margin-top: 20px;
+}
+.form-header{
+    font-size: 28px;
+    font-weight: 900;
+}
+.form-desc{
+    font-size: 18px;
+    font-weight: 500;
+}
+.form-element{
+    margin-bottom: 20px;
+}
+.drop-container{
+padding: 0;
+}
+.label-class{
+    margin-left: 10px;
+    vertical-align: middle;
+}
